[package]
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
build = "build.rs"
description = """
Top Level domain static hash map, tld list is obtained from of iana.org
"""
documentation = "https://docs.rs/tld"
homepage = "https://github.com/pagescrape/tld.rs"
license = "BSD-3-Clause"
name = "tld"
repository = "https://github.com/pagescrape/tld.rs"
version = "2.23.0"

[dependencies]
phf = "0.8"

[build-dependencies]
phf_codegen = "0.8"
